--- a/Lab 03/package.json
+++ b/Lab 03/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
